--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,7 @@ html, body{
     height: 100%;
     background-color: #222;
 }
-.content{
+.app{
     width: 100%;
     height: 100%;
 }
@@ -17,13 +17,35 @@ html, body{
 /* stage -- end */
 
 /* image -- start */
-img-sec{
+.img-sec{
     position: relative;
     height: 100%;
     width: 100%;
     overflow: hidden;
 
     background-color: #ddd;
+    @at-root {
+        .img-figure {
+            position: absolute;
+            width: 320px;
+            height: 360px;
+            margin: 0;
+            padding: 40px;
+            background-color: #fff;
+            box-sizing: border-box;
+        }
+
+        figcaption{
+            text-align: center;
+
+            .img-title{
+                margin: 20px 0 0 0;
+
+                color: #a7a0a2;
+                font-size: 16px;
+            }
+        }
+    }
 }
 /* image -- end */
 
