--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: "icons-turn-arrow";
+    src: url("../fonts/icons/turn-arrow.eot") format("embedded-opentype"), url("../fonts/icons/turn-arrow.woff") format("woff"), url("../fonts/icons/turn-arrow.ttf") format("truetype"), url("../fonts/icons/turn-arrow.svg") format("svg");
+}
 html, body{
     width: 100%;
     height: 100%;
@@ -24,6 +28,7 @@ html, body{
     overflow: hidden;
 
     background-color: #ddd;
+    perspective: 1800px;
     @at-root {
         .img-figure {
             position: absolute;
@@ -34,7 +39,9 @@ html, body{
             background-color: #fff;
             box-sizing: border-box;
             transform-style: preserve-3d;
+            transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
             cursor: pointer;
+            transform-origin: 0 50% 0;
             &.is-inverse{
                 transform: translate(320px) rotateY(180deg);
             }
@@ -67,8 +74,9 @@ html, body{
                 background-color: #fff;
 
                 box-sizing: border-box;
-                backface-visibility: hidden;
                 transform: rotateY(180deg) translateZ(1px);
+                backface-visibility: hidden;
+               
 
                 p{
                     margin: 0;
@@ -86,9 +94,9 @@ html, body{
     bottom: 30px;
     z-index: 101;
 
-    width: 100%
+    width: 100%;
 
-    text-align：center;
+    text-align:center;
     @at-root {
         .controller-unit {
             display: inline-block;
