--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,7 +16,7 @@ html, body{
     position: relative;
 
     width: 100%;
-    height: 680px;
+    height: 734px;
 }
 /* stage -- end */
 
@@ -80,6 +80,7 @@ html, body{
 
                 p{
                     margin: 0;
+                    white-space: pre-line;
                 }
             }
         }
